# kamipass

./: .gitignore  .prettierignore  README.md  package.json
plugins/: backup-with-discord.js  decrypt-passwords.js  index.json
src/: api.js  dependencies.js  index.html  script.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
